--- a/.github/workflows/aws_application_deploy.yaml
+++ b/.github/workflows/aws_application_deploy.yaml
@@ -1,4 +1,4 @@
-name: Set up terraform state on S3
+name: Deploy Terraform to AWS
 
 on: [workflow_dispatch]
 
@@ -23,18 +23,21 @@ jobs:
         terraform_version: 1.0.0
 
     - name: Terraform init
-      working-directory: ./terraform/backend
+      working-directory: ./terraform/live/dev/services/application
       run: terraform init
 
     - name: Terraform plan
-      working-directory: ./terraform/backend
+      working-directory: ./terraform/live/dev/services/application
       id: tf-plan
       run: terraform plan -out=tfplan
       
     - name: Terraform apply 
       if: github.ref == 'refs/heads/main'
-      working-directory: ./terraform/backend
+      working-directory: ./terraform/live/dev/services/application
       run: terraform apply -auto-approve tfplan
 
+    - name: Clean up
+      run: terraform destroy -auto-approve
+      if: always()  # Ensure destruction even on failure
 
 # Add any additional steps or customizations as needed
