--- a/.github/workflows/aws_application_deploy.yaml
+++ b/.github/workflows/aws_application_deploy.yaml
@@ -26,6 +26,13 @@ jobs:
       working-directory: ./terraform/live/dev/services/application
       run: terraform init
 
+    - name: Set Terraform Variables
+      run: |
+        echo "TF_VAR_s3_drop_zone_bucket=s3-drop-zone-12134477a" >> $GITHUB_ENV
+        echo "TF_VAR_s3_snowflake_bucket=snowflake-drop-zone-12134477a" >> $GITHUB_ENV
+        echo "TF_VAR_min_size=0" >> $GITHUB_ENV
+        echo "TF_VAR_max_size=2" >> $GITHUB_ENV
+
     - name: Terraform plan
       working-directory: ./terraform/live/dev/services/application
       id: tf-plan
