--- a/.github/workflows/aws_application_deploy.yaml
+++ b/.github/workflows/aws_application_deploy.yaml
@@ -17,6 +17,13 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1  # Change to your desired AWS region
 
+    - name: Load environment variables
+      run: |
+        source workflow-parameters.env
+        echo "APPLICATION_DESTORY=$DESTROY" >> $GITHUB_ENV
+      env:
+        GITHUB_ENV: ${{ github.workspace }}/.env
+
     - name: Install Terraform
       uses: hashicorp/setup-terraform@v1
       with:
@@ -44,7 +51,7 @@ jobs:
       run: terraform apply -auto-approve tfplan
 
     - name: Clean up
+      if: ${{ env.APPLICATION_DESTORY }} == 'true'
       run: terraform destroy -auto-approve
-      if: always()  # Ensure destruction even on failure
 
 # Add any additional steps or customizations as needed
