--- a/.github/workflows/aws_application_deploy.yaml
+++ b/.github/workflows/aws_application_deploy.yaml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Load environment variables
       run: |
-        source workflow-parameters.env
+        source $GITHUB_WORKSPACE/workflow-parameters.env
         echo "APPLICATION_DESTORY=$DESTROY" >> $GITHUB_ENV
       env:
         GITHUB_ENV: ${{ github.workspace }}/.env
