--- a/.github/workflows/aws_application_deploy.yaml
+++ b/.github/workflows/aws_application_deploy.yaml
@@ -52,6 +52,7 @@ jobs:
 
     - name: Clean up
       if: ${{ env.APPLICATION_DESTORY }} == 'true'
+      working-directory: ./terraform/live/dev/services/application
       run: terraform destroy -auto-approve
 
 # Add any additional steps or customizations as needed
