--- a/.github/workflows/aws_s3_buckets.yaml
+++ b/.github/workflows/aws_s3_buckets.yaml
@@ -18,9 +18,6 @@ jobs:
         aws-region: us-east-1  # Change to your desired AWS region
 
     - name: Load environment variables
-      run: |
-        source $GITHUB_WORKSPACE/.github/workflows/workflow-parameters.env
-        echo "S3_DESTROY=$DESTROY" >> $GITHUB_ENV
       env:
         GITHUB_ENV: ${{ github.workspace }}/.env
 
@@ -49,7 +46,7 @@ jobs:
       run: terraform apply -auto-approve tfplan
 
     - name: Clean up
-      if: ${{ env.S3_DESTROY }} == 'true'
+      if: ${{ env.DESTROY }} == 'true'
       working-directory: ./terraform/live/global/s3
       run: terraform destroy -auto-approve
 
