--- a/.github/workflows/aws_s3_buckets.yaml
+++ b/.github/workflows/aws_s3_buckets.yaml
@@ -41,8 +41,11 @@ jobs:
       working-directory: ./terraform/live/global/s3
       run: terraform apply -auto-approve tfplan
 
+    - name: Set terraform DESTROY variable
+      run: echo "DESTROY=false" >> $GITHUB_ENV
+
     - name: Clean up
-      if: ${{ vars.DESTROY }} == 'true'
+      if: ${{ env.DESTROY }} == 'true'
       working-directory: ./terraform/live/global/s3
       run: terraform destroy -auto-approve
 
