--- a/.github/workflows/aws_s3_buckets.yaml
+++ b/.github/workflows/aws_s3_buckets.yaml
@@ -17,6 +17,13 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1  # Change to your desired AWS region
 
+    - name: Load environment variables
+      run: |
+        source $GITHUB_WORKSPACE/.github/workflows/workflow-parameters.env
+        echo "S3_DESTROY=$DESTROY" >> $GITHUB_ENV
+      env:
+        GITHUB_ENV: ${{ github.workspace }}/.env
+
     - name: Install Terraform
       uses: hashicorp/setup-terraform@v1
       with:
@@ -41,11 +48,8 @@ jobs:
       working-directory: ./terraform/live/global/s3
       run: terraform apply -auto-approve tfplan
 
-    - name: Set terraform DESTROY variable
-      run: echo "DESTROY=true" >> $GITHUB_ENV
-
     - name: Clean up
-      if: ${{ env.DESTROY == 'true' }}
+      if: ${{ env.S3_DESTROY == 'true' }}
       working-directory: ./terraform/live/global/s3
       run: terraform destroy -auto-approve
 
