--- a/.github/workflows/aws_ecr_creation.yaml
+++ b/.github/workflows/aws_ecr_creation.yaml
@@ -44,7 +44,7 @@ jobs:
       run: terraform apply -auto-approve tfplan
 
     - name: Clean up
-      if: ${{ env.ECR_DESTROY }} == 'true'
+      if: ${{ env.ECR_DESTROY == 'true' }}
       working-directory: ./terraform/live/global/ecr
       run: terraform destroy -auto-approve
 
