--- a/.github/workflows/workflow-parameters.env
+++ b/.github/workflows/workflow-parameters.env
@@ -1,5 +1,5 @@
-APPLICATION_DESTORY=false
-ECR_DESTROY=false
-IAM_DESTROY=false
-S3_DESTROY=false
-VPC_DESTROY=false
+APPLICATION_DESTORY=true
+ECR_DESTROY=true
+IAM_DESTROY=true
+S3_DESTROY=true
+VPC_DESTROY=true
