--- a/.github/workflows/aws_application_deploy.yaml
+++ b/.github/workflows/aws_application_deploy.yaml
@@ -20,7 +20,7 @@ jobs:
     - name: Load environment variables
       run: |
         source $GITHUB_WORKSPACE/.github/workflows/workflow-parameters.env
-        echo "APPLICATION_DESTORY=$DESTROY" >> $GITHUB_ENV
+        echo "APPLICATION_DESTROY=$APPLICATION_DESTROY" >> $GITHUB_ENV
       env:
         GITHUB_ENV: ${{ github.workspace }}/.env
 
