--- a/.github/workflows/aws_ecr_creation.yaml
+++ b/.github/workflows/aws_ecr_creation.yaml
@@ -20,7 +20,7 @@ jobs:
     - name: Load environment variables
       run: |
         source $GITHUB_WORKSPACE/.github/workflows/workflow-parameters.env
-        echo "ECR_DESTROY=$DESTROY" >> $GITHUB_ENV
+        echo "ECR_DESTROY=$ECR_DESTROY" >> $GITHUB_ENV
       env:
         GITHUB_ENV: ${{ github.workspace }}/.env
 
